--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "academix-monorepo",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "start-backend": "cd backend && npm start",
-    "start-frontend": "cd frontend && npm start",
-    "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
-  },
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "scripts": {
+    "start": "concurrently \"npm:start-backend\" \"npm:start-frontend\"",
+    "start-backend": "cd backend && cross-env PORT=5000 npm start",
+    "start-frontend": "cd frontend && cross-env PORT=3000 npm start"
   }
 }
