chore: stage all changes for deployment updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,24 @@
-# Copy this file to `.env` and fill in your real credentials (DO NOT commit real credentials)
-# Example values showing the user's DB name and password (use carefully):
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=class
-DB_USER=root
-DB_PASSWORD=kelly123
+PORT=5002
+NODE_ENV=development
 
-# Other environment variables used by the backend (examples)
-PORT=5000
-JWT_SECRET=your_jwt_secret_here
+# Database
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=kelly123
+DB_NAME=class_ai_db
+
+# JWT
+JWT_SECRET=your-super-secret-key-change-in-production
+
+# Redis
+REDIS_URL=redis://localhost:6379
+
+# Email (SendGrid or Mailgun)
+SENDGRID_API_KEY=your_sendgrid_api_key
+MAILGUN_API_KEY=your_mailgun_api_key
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# QR Settings
+QR_EXPIRY_SECONDS=60
