--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "pg": "^8.8.0",
