--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,15 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "4.29.12",
+    "recharts": "^2.6.2",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "react-qr-code": "^2.0.6",
+    "papaparse": "^5.4.1",
+    "jspdf": "^2.5.1",
     "axios": "^1.3.4",
     "html5-qrcode": "^2.2.2",
     "react": "^18.2.0",
@@ -17,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "postinstall": "node ./scripts/patch-html5qrcode.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,6 +47,11 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "@types/react": "18.2.21"
+  }
+  ,
+  "overrides": {
+    "@types/react": "18.2.21"
   }
 }
