--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,24 @@
 REACT_APP_API_URL=http://localhost:5002
+REACT_APP_WEBSOCKET_URL=http://localhost:5002
 REACT_APP_ENV=development
+REACT_APP_ENVIRONMENT=development
+
+# Features
+REACT_APP_ENABLE_AI_FEATURES=true
+REACT_APP_ENABLE_REAL_TIME_UPDATES=true
+REACT_APP_ENABLE_ANALYTICS=true
+
+# Security
+REACT_APP_TOKEN_EXPIRY_MINUTES=60
+REACT_APP_REFRESH_TOKEN_ENABLED=true
+
+# Logging
+REACT_APP_DEBUG_MODE=false
+REACT_APP_LOG_LEVEL=info
+
+# Feature Flags
+REACT_APP_FEATURE_QR_SCANNING=true
+REACT_APP_FEATURE_NOTIFICATIONS=true
+REACT_APP_FEATURE_MESSAGING=true
+REACT_APP_FEATURE_ANALYTICS=true
+REACT_APP_FEATURE_AI_INSIGHTS=true
