--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,52 @@
-FROM node:18-alpine
+# Multi-stage build for production
+FROM node:18-alpine AS base
 
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init curl
+
+# Set working directory
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
-RUN npm ci --only=production
+# Dependencies stage
+FROM base AS dependencies
 
+# Install all dependencies (including dev dependencies for building)
+RUN npm ci && npm cache clean --force
+
+# Production stage
+FROM base AS production
+
+# Copy production dependencies
+COPY --from=dependencies /app/node_modules ./node_modules
+
+# Copy source code
 COPY . .
 
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S classtrack -u 1001
+
+# Create logs directory with proper permissions
+RUN mkdir -p logs && chown -R classtrack:nodejs logs
+
+# Switch to non-root user
+USER classtrack
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:5002/health || exit 1
+
+# Expose port
 EXPOSE 5002
 
+# Set production environment
 ENV NODE_ENV=production
 
+# Use dumb-init to handle signals properly
+ENTRYPOINT ["dumb-init", "--"]
+
+# Start production server
 CMD ["node", "server.js"]
