--- a/backend/package.json
+++ b/backend/package.json
@@ -18,17 +18,23 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.0",
+    "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.1",
     "mysql2": "^3.2.0",
     "pg": "^8.8.0",
     "redis": "^4.6.5",
     "socket.io": "^4.8.1",
-    "web-push": "^3.6.5"
+    "web-push": "^3.6.5",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
