--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "4.29.12",
-    "recharts": "^2.6.2",
-    "@fullcalendar/react": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
-    "react-qr-code": "^2.0.6",
-    "papaparse": "^5.4.1",
-    "jspdf": "^2.5.1",
     "axios": "^1.3.4",
     "html5-qrcode": "^2.2.2",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.561.0",
+    "papaparse": "^5.4.1",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
+    "recharts": "^2.6.2",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.2.4"
   },
@@ -47,10 +49,9 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "@types/react": "18.2.21"
-  }
-  ,
+    "@types/react": "18.2.21",
+    "react-scripts": "5.0.1"
+  },
   "overrides": {
     "@types/react": "18.2.21"
   }
